@@ -5,18 +5,18 @@ plugins {
 }
 
 group = 'com.bot'
-version = '2.0.3-BETA'
+version = '2.0.4-BETA'
 
 java {
     toolchain {
-        languageVersion = JavaLanguageVersion.of(17)
+        languageVersion = JavaLanguageVersion.of(25)
     }
 }
 
 repositories {
     mavenCentral()
-    maven { url 'https://jitpack.io' }
-    maven { url 'https://maven.lavalink.dev/releases' }
+    maven { url = 'https://jitpack.io' }
+    maven { url = 'https://maven.lavalink.dev/releases' }
 }
 
 dependencies {
@@ -25,10 +25,17 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
 
     // Discord JDA
-    implementation 'net.dv8tion:JDA:6.2.1'
+    implementation 'net.dv8tion:JDA:6.3.1'
 
     // Lavaplayer
     implementation 'dev.arbjerg:lavaplayer:2.2.6'
+
+    // DAVE E2EE
+    implementation 'club.minnced:jdave-api:0.1.6'
+    implementation 'club.minnced:jdave-native-linux-x86-64:0.1.6'
+    implementation 'club.minnced:jdave-native-linux-aarch64:0.1.6'
+    implementation 'club.minnced:jdave-native-win-x86-64:0.1.6'
+    // implementation 'club.minnced:jdave-native-darwin:0.1.6'
 
     // YouTube source libs
     implementation 'dev.lavalink.youtube:youtube-plugin:1.18.0'
@@ -55,6 +62,13 @@ tasks.named('test') {
     useJUnitPlatform()
 }
 
+bootRun {
+    jvmArgs = ['--enable-native-access=ALL-UNNAMED']
+}
+
 bootJar {
     archiveFileName = "${project.name}-${project.version}.jar"
+    manifest {
+        attributes 'Enable-Native-Access': 'ALL-UNNAMED'
+    }
 }
